# ReplicantDriveSim

./: .gitattributes  .gitignore  .gitmodules  .readthedocs.yaml  CLAUDE.md  CMakeLists.txt  Dockerfile  Doxyfile  Gemfile  Jenkinsfile  LIBOPENDRIVE_CRASH_ANALYSIS.md  MANIFEST.in  MAPACCESS_README.md  MODERNIZATION_SUMMARY.md  Makefile  PACKAGING.md  README.md  README_FIX.md  UNITY6_MIGRATION.md  UNITY6_TROUBLESHOOTING.md  UNITY_BUILD_AUTOMATION.md  VEHICLE_DYNAMICS_FIXES.md  _config.yml  bindings.cpp  build_and_deploy.sh  build_extensions.py  build_native_library.sh  build_unity_app.sh  check_environment.py  docker-compose.yml  docker_push.sh  environment.yml  install.sh  main.py  multi_agent_demonstrations.json  pyproject.toml  replicant_drive_sim.py  run_simulation.py  runner.py  setup.cfg  (+8 more)
.github/workflows/: activation.yml  claude-code-review.yml  claude.yml  deploy-gh-pages.yml  deploy-readthedocs.yml  docker-publish.yml  doxygen-gh-pages.yml  doxygen-jekyll-build.yml  jekyll-build.yml  jekyll-doxygen-build.yml  jekyll.yml  publish-docker-image.yml  publish-docker.yml  publish-gh-package.yml  publish-gh-pages.yml  publish-pypi-package.yml  publish-pypi.yml  publish-readthedocs.yml  publish-release.yml  publish-unity-project.yml  test-dispatch.yml  trigger-gh-release.yml  trigger-release.yml  unity-check.yml
Assets/: README.md  UnityReplicantDriveSim.mlagents.settings.asset
Assets/EasyRoads3D/: Quick Start.txt  _readme .txt
Assets/EasyRoads3D/SRP Support Packages/: URP_12_1_6.unitypackage  URP_15_0_5.unitypackage  URP_16_0_5.unitypackage  URP_17_0_3.unitypackage
Assets/Editor/: BuildScript.cs  EditorScripts.asmdef
Assets/ML-Agents/Timers/: SampleScene_timers.json
Assets/Materials/: Sand.mat
Assets/Models/: NISSAN-GTR.fbx  mercedes-benz_AMG_GT-R.fbx
Assets/Plugins/TrafficSimulation/: CMakeLists.txt  README.md  environment.yml  libReplicantDriveSim.1.0.0.dylib  libReplicantDriveSim.1.dylib  libReplicantDriveSim.dylib  setup.py
Assets/Plugins/TrafficSimulation/include/: MapAccessor.h  OpenDriveWrapper.h  bicycle_model.h  perception_module.h  simulation.h  traffic.h  traffic_simulation_c_api.h  vehicle.h
Assets/Plugins/TrafficSimulation/src/: CMakeLists.txt  MapAccessor.cpp  OpenDriveWrapper.cpp  bicycle_model.cpp  bindings.cpp  simulation.cpp  traffic.cpp  traffic_simulation_c_api.cpp  vehicle.cpp
Assets/Prefabs/: Airplane.prefab  MercedesBenzAMGGTR.prefab  NISSAN-GTR.prefab  Rock_F_01.prefab  Rock_M_01.prefab  Rock_T_01.prefab
Assets/Scenes/: SampleScene.unity
Assets/Scripts/: AgentStateCache.cs  CreateRoad.cs  DynamicBEVCameraController.cs  FieldValueChannel.cs  FixedBEVCamera.cs  MapAccessorRenderer.cs  MapAccessorRendererSafe.cs  OpenDriveGeometryGenerator.cs  OpenDriveLoader.cs  OpenDriveParser.cs  OpenDriveRenderer.cs  README.md  RenderData.cs  RoadMaterialLoader.cs  RoadMeshDebugger.cs  SafeSimulationSetup.cs  SceneBootstrapper.cs  SceneSetupHelper.cs  SimulationBridge.cs  TrafficAgent.cs  TrafficAgentSafe.cs  TrafficManager.cs  TrafficManagerSafe.cs  UnityMainThreadDispatcher.cs  UnityPluginBridge.cs  VehicleMLAgent.cs  XODR2PATH.cs  XODR_Basics.cs  client.cs
Assets/Textures/Road007_2K-JPG/: RoadMaterial.mat
Assets/Textures/Road007_2K-JPG/Materials/: Road007.mat
ProjectSettings/: EditorBuildSettings.asset  PackageManagerSettings.asset  ProjectSettings.asset  ProjectVersion.txt  TagManager.asset
docs/: conf.py  index.rst  requirements.txt
examples/: marwill_runner.py  runner.py  trainer.py
examples/conf/: config.yaml
examples/configs/: config.yaml  config_schema.yaml  mlagent_config.yaml
include/: collision_detection.h  perception_module.h  simulation.h  traffic.h  traffic_simulation.h  vehicle.h
libReplicantDriveSim.app/Contents/: Info.plist
libReplicantDriveSim.app/Contents/Frameworks/: libMonoPosixHelper.dylib  libmono-native.dylib
libReplicantDriveSim.app/Contents/ML-Agents/Timers/: SampleScene_timers.json
libReplicantDriveSim.app/Contents/MacOS/: UnityReplicantDriveSim
libReplicantDriveSim.app/Contents/PlugIns/: libReplicantDriveSim.1.0.0.dylib  lib_burst_generated.bundle
libReplicantDriveSim.app/Contents/Resources/Data/: app.info  boot.config  globalgamemanagers  globalgamemanagers.assets  level0  level0.resS
libReplicantDriveSim.app/Contents/Resources/Data/Resources/: unity_builtin_extra
libReplicantDriveSim.app/Contents/_CodeSignature/: CodeResources
replicantdrivesim/: __init__.py  replicantdrivesim.py
replicantdrivesim/configs/: config.yaml  config_schema.yaml
replicantdrivesim/envs/: README.md  __init__.py  environment.py  unity_env_resource.py  utils.py
replicantdrivesim/rl/: README.md  __init__.py  environment.py  marwil_trainer.py  runner.py  script.py  tunner_trainer.py  unity_env_resource.py
rl/: README.md  __init__.py  config.yaml  config_schema.yaml  environment.py  hierarchical_environment.py  hierarchical_trainer.py  marwil_trainer.py  runner.py  trainer.py  trainer_tune.py  tunner_trainer.py  unity_env_resource.py  utils.py
src/: CMakeLists.txt  bindings.cpp  collision_detection.cpp  perception_module.cpp  simulation.cpp  traffic.cpp  traffic_simulation.cpp  vehicle.cpp
tests/: CMakeLists.txt  __init__.py  perception_module_test.cpp  test_rllib_compatibility.py  test_spaces_validation.py  traffic_simulation_test.cpp
