[build-system]
requires = ["setuptools>=61.0", "wheel", "pybind11"]
build-backend = "setuptools.build_meta"

#[project]
#name = "ReplicantDriveSim"
#version = "0.1.8"
#description = "ReplicantDriveSim is an advanced traffic simulation project designed for autonomous driving research."
#readme = "README.md"
#requires-python = ">=3.8"
#authors = [
#  { name = "Christian Contreras-Campana", email = "chrisjcc.physics@gmail.com" },
#  { name = "Emmanuel Contreras-Campana" }
#]
#classifiers = [
#  "Programming Language :: Python :: 3",
#  "License :: OSI Approved :: MIT License",
#  "Operating System :: OS Independent"
#]
#dependencies = [
#  "numpy",
#  "torch",
#  "gymnasium",
#  "ray",
#  "mlagents",
#  "mlflow",
#  "nbsphinx",
#  'myst_parser',
#  "furo"
#]

#[project.urls]
#homepage = "https://github.com/chrisjcc/ReplicantDriveSim/"

#[tool.setuptools]
#packages = ["rl", "Assets"]
#include-package-data = true
