[metadata]
name = ReplicantDriveSim
version = 0.4.8
description = A Unity Traffic Simulation
long_description = file: README.md
long_description_content_type = text/markdown
author = Christian Contreras Campana
author_email = chrisjcc.physics@gmail.com
license = MIT
url = https://chrisjcc.github.io/ReplicantDriveSim
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
keywords = traffic, simulation, autonomous driving, reinforcement learning, multi-agent reinforcement learning, rl, marl

[project.urls]
Homepage = "https://chrisjcc.github.io/ReplicantDriveSim"
Documentation = "https://readthedocs.org/projects/replicantdrivesim"
Repository = "https://github.com/chrisjcc/ReplicantDriveSim/tree/main"

[options]
python_requires = >=3.8
install_requires =
    numpy
    pyyaml
    gymnasium
    ray
    rllib

[options.entry_points]
console_scripts =
    replicantdrivesim = replicantdrivesim.cli:main

[build_ext]
inplace=1
