[metadata]
name = replicantdrivesim
version = 0.6.6
description = A Unity Traffic Simulation
long_description = file: README.md
long_description_content_type = text/markdown
author = Christian Contreras Campana
author_email = chrisjcc.physics@gmail.com
license = MIT
url = https://chrisjcc.github.io/ReplicantDriveSim
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
keywords = traffic, simulation, autonomous driving, reinforcement learning, multi-agent reinforcement learning, rl, marl

[project.urls]
Homepage = "https://chrisjcc.github.io/ReplicantDriveSim"
Documentation = "https://readthedocs.org/projects/replicantdrivesim"
Repository = "https://github.com/chrisjcc/ReplicantDriveSim/tree/main"

[options]
packages = find:
python_requires = >=3.10.1,<=3.10.12
install_requires =
    mlagents==1.1.0
    mlagents-envs==1.1.0
    gymnasium==0.26.3
    ray[rllib]==2.31.0
    protobuf==3.20.3
    numpy>=1.23.5,<1.24.0
    torch>=2.1.1

[options.package_data]
replicantdrivesim = 
    *.so
    configs/*.yaml
    Builds/StandaloneOSX/**/*
    Builds/Windows/libReplicantDriveSim.exe
    Builds/Linux/libReplicantDriveSim.x86_64
    configs/*.yaml

[options.entry_points]
console_scripts =
    replicantdrivesim = replicantdrivesim.cli:main

[build_ext]
inplace=1
